fix button on mobile

--- a/css/list.css
+++ b/css/list.css
@@ -154,7 +154,6 @@ li.fl-nav-item:hover a {
   top: 0px;
   margin: 4px;
   margin-top: 16px;
-  max-width: 50%;
 }
 
 .btn-order:hover, .btn-order:active {
